[tool.poetry]
name = "smartypants"
version = "0.0.1"
description = "The smart home thingie"
authors = ["Kaspars Mickevics <kaspars@fx.lv>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arrow = "^1.2.3"
click = "^8.1.3"
loguru = "^0.6.0"
paho-mqtt = "^1.6.1"
green = "^3.4.3"
pyzabbix = "^1.2.1"
devtools = "^0.9.0"
requests = "^2.28.1"
pydantic = "^1.10.2"
pytest = "^7.1.3"
mypy = "^0.982"
pytest-watch = "^4.2.0"
hypothesis = "^6.56.3"

[tool.poetry.group.dev.dependencies]
bpython = "^0.23"
black = "^22.10.0"
pytest = "^7.1.3"
hypothesis = "^6.56.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
